# rust-web-chat

./: .env  .prettierrc  Cargo.toml  README.md  benchmark.lua  benchmark.sh
migrations/: 20201025122700_users.sql  20201101082951_message.sql
src/: main.rs
src/chat/: controller.rs  model.rs  service.rs
src/chat/model/: chat.rs  chat_context.rs  chat_message.rs  chat_room.rs  mod.rs
src/libs/: jwt.rs  mod.rs
src/models/: api.rs  mod.rs  state.rs
src/user/: constant.rs  controller.rs  mod.rs  model.rs  service.rs
static/: index.html  signin.html  signup.html
