[package]
name = "websocket"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.1"
actix-web-actors = "3.0.0"
actix-identity = "0.3.1"

sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }

serde = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "0.2.22", features = [ "full" ] }

cookie = "0.14.2"

anyhow = "1.0.33"
dotenv = "0.15.0"

jsonwebtoken = "7.2.0"
data-encoding = "2.3.0"
ring = "0.16.15"